# asr

./: CLAUDE.md  index-final.html  index-v1.2.html  index.html  server.py  test-intent-v2.html  test-symbol-system.html  需求文档.md
asr_api_service/: .env.example  .gitignore  ARCHITECTURE.md  ASR_API_使用指南.md  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json  requirements.txt
asr_api_service/docker/: nginx.conf  prometheus.yml
asr_api_service/docker/grafana/dashboards/: dashboard.yml
asr_api_service/docker/ssl/: README.md
asr_api_service/docs/: audio-transmission-optimization.md  expo-react-native-vad-integration.md  expo-vad-quickstart.md  ffmpeg-installation.md  mobile-api-usage.md  swagger-testing-guide.md
asr_api_service/examples/: client_performance_comparison.py  streaming_client.py  vad_api_example.py
asr_api_service/scripts/: start.sh
asr_api_service/src/asr_api_service/: __init__.py  cli.py  config.py  exceptions.py  main.py
asr_api_service/src/asr_api_service/api/: __init__.py
asr_api_service/src/asr_api_service/api/v1/: __init__.py  health.py  mobile.py  stream_vad.py  streaming.py  transcription.py  vad.py
asr_api_service/src/asr_api_service/core/: __init__.py
asr_api_service/src/asr_api_service/core/asr/: __init__.py  base.py  whisper.py
asr_api_service/src/asr_api_service/core/audio/: __init__.py  buffer.py  vad.py
asr_api_service/src/asr_api_service/core/streaming/: __init__.py  manager.py  processor.py
asr_api_service/src/asr_api_service/models/: __init__.py  audio.py  streaming.py  transcription.py
asr_api_service/src/asr_api_service/utils/: __init__.py  logging.py  validation.py
asr_api_service/tests/: __init__.py
asr_api_service/tests/unit/: test_audio_buffer.py  test_config.py
meeting-tool/: README.md  index.html  server.py  test-intent-v2.html  test-intent.html  test-vad-esm.html  test-vad.html  vad-test.js
meeting-tool/public/: ten_vad_loader.js
meeting-tool/src/: aiAppStore.js  app.js  functionCallDetector.js  geminiIntentDetector.js  intentDetector.js  searchManager.js  speechRecognition.js  tenVad.js  ten_vad.js  tts.js  vad.js  wakeWord.js
meeting-tool/styles/: main.css
vad-based-streaming-asr/: .gitignore  README.md  index.html  requirements.txt  run.sh  server.py  server_main.py  技术报告.md
